# simple-c-tester

./: .gitattributes  .gitignore  AGENTS.md  README.md  build.sh  build_pex.sh  build_standalone.sh  ctester.pex  pyproject.toml  requirements.txt
.github/workflows/: build.yml
assets/: ctester.webm
c/tests/: basic_equality.c  ctest.h  test_addition.c  test_comparison.c  test_division.c  test_multiplication.c  test_power.c  test_subtraction.c  test_sum.c
c/tests/a/: test_array_access.c  test_string_compare.c
src/: app.py  main.py  state.py
src/api/: __init__.py  _headless_smoke.py  _runner.py  _variable_tree.py
src/api/resources/: ctest.h
src/core/: __init__.py  assertions.py  build.py  config.py  debug_log.py  events.py  state.py  userconfig.py
src/core/dwarf/: global_index.py  line_index.py  loader.py  models.py  source_parser.py  source_parser_models.py  variable_scopes.py
src/core/models/: __init__.py  enum.py  models.py
src/core/story/: __init__.py  annotation_resolver.py  annotations.py  expression_tokenizer.py
src/models/: __init__.py  enum.py  models.py
src/render/: __init__.py  labels.py  lexical_scope_history_screen.py  output.py  screens.py  styles.py  test_debugger_screen.py  test_output_screen.py  tree.py
src/render/test_debugger_screen_utils/: __init__.py  frame_utils.py  render_utils.py  (+1 more)
src/runner/: __init__.py  annotation_resolver.py  artifacts.py  debugger.py  execute.py  expression_tokenizer.py  makefile.py  source_scopes.py  state.py  story_annotations.py
src/ui/: __init__.py  app.py
src/watch/: __init__.py  handler.py
(+33 files in other folders)
