[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "simple-c-tester"
version = "0.4.3"
requires-python = ">=3.9"
dependencies = [
    "rich>=13.7.0",
    "watchdog>=3.0.0",
    "textual>=0.68.0",
    "pygdbmi>=0.11.0",
    "pyelftools>=0.31",
]

[project.scripts]
simple-c-tester = "main:entry"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["main", "app", "state"]

[tool.setuptools.packages.find]
where = ["src"]
